--- a/budapest/manifest.json
+++ b/budapest/manifest.json
@@ -14,7 +14,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "/budapest",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007BFF",
