--- a/budapest/manifest.json
+++ b/budapest/manifest.json
@@ -16,7 +16,7 @@
   ],
   "start_url": "/budapest",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#bcd9ff",
   "theme_color": "#007BFF",
   "orientation": "portrait"
 }
